# reachy-mini-sdk-skill

./: CHANGELOG  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
scripts/: package_skill.py  requirements.txt
skill/: METADATA.yaml  SKILL.md
skill/references/: ai_integration.md  api_quick_reference.md  installation.md  movement_control.md  openapi_schema.json  sensors.md
